--- a/src/app/payComplete/payComplete.css
+++ b/src/app/payComplete/payComplete.css
@@ -10,16 +10,16 @@ main{
     flex-direction: column;
     align-items: center;
 }
-h2{
+h2.Pcon{
     font-size: 2.5rem;
     margin: 0 0 50px 0;
 }
-p{
+p.Pcon{
     font-size: 1.2rem;
     margin: 0 0 25px 0;
     line-height: 2;
 }
-a{
+a.Pcon{
     display: block;
     font-size: 40px;
     text-decoration: none;
