細い時のカートの処理考えた方が良いかも　暫定で消します

--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -184,3 +184,9 @@ button{
 div#footer{
     margin-top: 200px !important;
 }
+
+@media screen and (max-width: 1060px) {
+    div#cart{
+        display: none;
+    }
+}
