商品取り出し完了！ 取説も完了！

--- a/src/app/_components/toppage_top_slideshow/common.css
+++ b/src/app/_components/toppage_top_slideshow/common.css
@@ -177,7 +177,7 @@
         opacity:1;
     }
     50% {
-        transform: rotate(-20deg);
+        transform:translate3d(-60%, 10%, 0)  rotate(-45deg); ;
         opacity:0;
     }
     100% {
