--- a/src/app/paidNote/paidNote.css
+++ b/src/app/paidNote/paidNote.css
@@ -22,8 +22,7 @@ span#btn button{
 
 
 div.paidText h2#PNtitle{
-    margin-top: 50px;
-    /*margin-bottom: 100px;*/
+    margin: 50px 0 100px 0;
     padding: 25px 0;
     text-align: center;
     font-size: 2rem;
@@ -31,26 +30,42 @@ div.paidText h2#PNtitle{
 }
 
 div.listing{
-    display: flex;
-    margin: 25px 25px;
-    background-color: white;
+    width: 90%;
+    margin: 0 auto 50px auto;
 }
 div.listing_product {
+    /*border: black 1px solid;*/
+
     display: flex;
-    margin-bottom: 20px;
+    flex-wrap: wrap;
+    background-color: white;
+
 }
 div.product{
-    width: 400px;
-    padding: 20px;
+    width: 50%;
+    padding: 5%;
     display: flex;
-    margin-left: 20px;
-    margin-right: 10px;
+    flex-direction: row;
+    border: #D0C7B2 1px solid;
+
+}
+
+div.product_text{
+    width: 50%;
+    margin: 0 0 0 5%;
+
+}
+
+div.product_text p {
+    font-size: 1.5rem;
 }
 
 div.listingText {
     word-break: break-all;
-    width: 300px;
+    width: 50%;
     padding: 20px;
+    /*border: black 1px solid;*/
+
 }
 div.listingText h3{
     font-size: 1.5rem;
@@ -59,10 +74,3 @@ div.listingText h3{
 div.listingText p {
 }
 
-div.product_text{
-    margin-left: 10px;
-}
-
-div.product_text p {
-    font-size: 30px;
-}
