--- a/src/app/favorite/favorite.css
+++ b/src/app/favorite/favorite.css
@@ -1,31 +1,44 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #EBE8DB;
 }
 
 span#btn{
     position: sticky;
     top: 90%;
     left: 87%;
+
+
 }
-
-
 span#btn button{
+    opacity: 0.7;
     padding: 10px 30px;
     border-radius: 20px;
+    background-color: #605252;
+    color: white;
+    font-weight: bold;
 }
+
 
 
 div.favorite{
-    margin-top: 80px;
-    margin-left: 90px;
+    margin: 50px 0 50px 0;
+    padding: 10px 0;
     display: flex;
     align-items: center;
+    background-color: #605252;
+    color: white;
+}
+div.favorite svg{
+    margin: 0 5% 0 10%;
 }
 
 div.favorite_products{
     width: 1500px;
+    /*%にすると表示が崩れるのでpxで処理しています*/
     display: flex;
+    flex-wrap: wrap;
     padding: 30px;
     margin-top: 50px;
     margin-bottom: 40px;
@@ -38,7 +51,7 @@ div.product{
     display: flex;
 
     margin: 0 auto;
-    background-color: #555555;
+    background-color: white;
 }
 
 
@@ -46,8 +59,10 @@ div.product{
 
 div.product_text{
     margin-left: 20px;
+    width: 70%;
+
 }
 
 div.product_text p{
-    font-size: 30px;
+    font-size: 1.5em;
 }
