--- a/src/app/(confirm)/confirmPayment/confirmpayment.css
+++ b/src/app/(confirm)/confirmPayment/confirmpayment.css
@@ -6,16 +6,20 @@ body {
     font-family: "Italiana", sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #EBE8DB;
 }
 
 div.main{
     width: 70%;
     margin:auto;
+    padding: 10px 0;
     display: flex;
     margin-top: 130px;
     flex-direction: column;
     font-family: "Italiana", sans-serif ;
     margin-bottom: 80px;
+    background-color: #ddd;
+    border-radius: 10px;
 }
 div.main p{
     font-size:2rem;
