--- a/src/app/sendAddress/sendAddress.css
+++ b/src/app/sendAddress/sendAddress.css
@@ -14,7 +14,8 @@ main{
     flex-direction: column;
     align-items: center;
     margin: 50px 10%;
-    background-color: #fff;
+    background-color: #eee;
+    border-radius: 10px;
 }
 
 h2{
