--- a/src/app/toppage/toppage.css
+++ b/src/app/toppage/toppage.css
@@ -34,7 +34,7 @@ div.siteIntroduction {
 }
 
 div.introduction {
-    width: 1920px;
+    width: 100%;
     height: 600px;
     margin: auto 0;
     display: flex;
@@ -91,6 +91,7 @@ ul.toppageBottomUl {
 
 
 li.toppageBottomLi {
+    width: 50%;
     height: 500px;
     text-align: center;
     align-items: center;
@@ -102,7 +103,6 @@ li.toppageBottomLi h2 {
     font-size: 5.2rem;
     font-weight: bold;
     letter-spacing: 5px;
-    width: 800px;
     display: flex;
     align-items: center;
     justify-content: center;
