--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -1,3 +1,9 @@
 body{
     background-color: #EBE8DB;
 }
+
+.searchresult{
+    /*width: 1200px;*/
+    justify-Content: space-between;
+    display: flex;
+}
