--- a/src/app/_components/sidebar/Sidebar.css
+++ b/src/app/_components/sidebar/Sidebar.css
@@ -3,18 +3,20 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #EBE8DB;
 }
 
-div.introduction{
-    margin-top: 100px;
-    width: 1180px;
-    height: 90vh;
+div.Sintroduction{
+    margin-top: 10%;
+    /*width: 1180px;*/
+    width: 100%;
+    /*height: 90vh;*/
     display: flex;
     justify-content: space-between;
 }
 
-div.sidebar{
-    width: 500px;
+div.Ssidebar{
+    width: 100%;
     /*height: 1200vh;*/
     /*background-color: #ffff99;*/
     margin-right: 80px;
@@ -22,8 +24,8 @@ div.sidebar{
 
 }
 
-div.sidebar .cart{
-    width: 400px;
+div.Ssidebar .Scart{
+    /*width: 400px;*/
     display: flex;
     align-items: center;
     margin-top: 40px;
@@ -31,14 +33,15 @@ div.sidebar .cart{
 }
 
 hr#side_line{
-    width: 90%;
+    width: 73%;
     margin-left: 0;
 }
 
-div.sidebar .cart h1 {
+div.Ssidebar .Scart h1 {
     font-family: "JetBrains Mono",monospace;
     display: flex;
-    width: 150px;
+    /*width: 150px;*/
+    width: 10%;
     height: 30px;
     font-size: 2.5rem;
     font-weight: 300;
@@ -46,7 +49,7 @@ div.sidebar .cart h1 {
     margin-right: 120px;
     align-items: center;
 }
-div.sidebar .cart p {
+div.Ssidebar .Scart p {
 
     display: flex;
     align-items: center;
@@ -54,27 +57,28 @@ div.sidebar .cart p {
 
 /*side_cart*/
 
-div.cart_inProduct{
-    width: 700px;
+div.Scart_inProduct{
+    /*width: 700px;*/
+    width: 100%;
     display: flex;
     flex-direction: row;
     /*justify-content: space-between;*/
     margin: 70px 0 20px 40px;
 }
-div.cart_inProduct figure{
+div.Scart_inProduct figure{
 
     max-width: 200px;
     max-height: 200px;
 
 }
-div.cart_inProduct figure img{
+div.Scart_inProduct figure img{
     /*width: 140px;*/
     /*height: 220px;*/
     object-fit: cover;
 
 }
 
-div.cart_inProduct ul{
+div.Scart_inProduct ul{
     margin: 10px 0 0 30px;
     width: 400px;
     font-family: "Zen Kaku Gothic Antique", sans-serif;
@@ -83,7 +87,7 @@ div.cart_inProduct ul{
     font-size: 1.2rem;
 }
 
-div.cart_inProduct ul li {
+div.Scart_inProduct ul li {
     display:flex;
 
 }
