--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #EBE8DB;
+
 }
 
 div #wrap{
@@ -10,12 +11,14 @@ div #wrap{
 }
 
 main{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
 }
 
 div.content{
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-content: center;*/
+
     width: 50%;
     margin: 100px auto 100px auto;
 }
