--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -173,11 +173,12 @@ div#control img{
     width: 50px;
 }
 
-button{
+button#buy{
     background-color: #000;
     font-size: 1.2rem;
     color: #fff;
     border-radius: 50px;
+    width: 8em;
     padding: 10px 20px;
 }
 
