--- a/src/app/(listing)/listingcomplete/listingcomplete.css
+++ b/src/app/(listing)/listingcomplete/listingcomplete.css
@@ -6,7 +6,7 @@ body {
 /*全体 */
 div#productlisning{
     width: 100%;
-    margin: 100px 0 50px 0;
+    margin: 25px 0 50px 0;
     display: flex;
     flex-direction: column;
 }
@@ -109,5 +109,8 @@ button{
     padding: 10px 20px;
     margin-right: 30px;
     margin-bottom: 30px;
+}
+button#edit{
+    background-color: #605252;
 }
 
