--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -1,8 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-
-
 }
 
 div #wrap{
@@ -11,15 +9,17 @@ div #wrap{
 }
 
 main{
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    background-color: #EBE8DB;
+    /*margin: 0;*/
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-content: center;*/
+    /*background-color: #EBE8DB;*/
 }
 
 div.content{
-
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-content: center;*/
     width: 50%;
     margin: 100px auto 100px auto;
 }
@@ -41,7 +41,6 @@ div#kamera{
     flex-shrink: 0;
     background: #D9D9D9;
     margin-bottom: 80px;
-
 }
 
 div#kamera img{
@@ -83,7 +82,7 @@ table#kategory{
     border-radius: 10px;
 }
 
-div.btn{
+div.ListingBtn{
     width: 500px;
     display: flex;
     justify-content: space-between;
@@ -91,22 +90,22 @@ div.btn{
     margin-bottom: 120px;
 }
 
-div.btn button{
+div.ListingBtn button{
 
     padding: 10px 50px;
     margin-left: 30px;
     border-radius: 50px;
 }
-div.btn p{
+div.ListingBtn p{
     font-weight: 600;
 }
 
-div.btn button#listingCancelbtn{
+div.ListingBtn button.listingCancelbtn{
     background-color: #D9D9D9;
     color: #000;
 }
 
-div.btn button#listingcompletebtn{
+div.ListingBtn button.listingcompletebtn{
     background-color: #000000;
     color: #fff;
 }
