--- a/src/app/(listing)/listingcomplete/listingcomplete.css
+++ b/src/app/(listing)/listingcomplete/listingcomplete.css
@@ -101,7 +101,7 @@ div#control{
     margin-left: 60%;
 }
 
-button{
+button.listingCompleteButton{
     background-color: #000;
     font-size: 1.2rem;
     color: #fff;
