--- a/src/app/(listing)/listingcomplete_Itiosikinou/listingcomplete_itiosikinou.css
+++ b/src/app/(listing)/listingcomplete_Itiosikinou/listingcomplete_itiosikinou.css
@@ -114,7 +114,7 @@ div#control {
     margin-left: 60%;
 }
 
-button {
+button.ItiosikinouButton{
     background-color: #000;
     font-size: 1.2rem;
     color: #fff;
