--- a/src/app/_components/searchHeader/searchHeader.css
+++ b/src/app/_components/searchHeader/searchHeader.css
@@ -61,25 +61,31 @@ div.bar span.long_line {
     border-left: 1px solid #000000;
 }
 
+span.searchInput{
+    margin-right: 15%;
+}
+
+span.searchInput input{
+    width: 180%  ;
+    padding: 1.5% 1%  ;
+    margin-right: 26% ;
+    border-radius: 10px ;
+    font-size: 1.5rem ;
+    border: none ;
+    background-color: #eee ;
+}
+
+span.searchInput input:focus{
+    outline: none ;
+}
+
 div.Sbar p.Sp{
     font-size: 1.5rem;
     margin: 0 5%;
     font-weight: bold;
 }
 
-input.search{
-    width: 50%;
-    padding: 1.5% 1% ;
-    margin-right: 2%;
-    border-radius: 10px;
-    font-size: 1.5rem;
-    border: none;
-    background-color: #eee;
-}
 
-input.search:focus{
-    outline: none;
-}
 
 div.bar ul span#short_line {
     font-size: 1.5rem;
