--- a/src/app/_components/sidebar/Sidebar.css
+++ b/src/app/_components/sidebar/Sidebar.css
@@ -3,14 +3,12 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #EBE8DB;
 }
 
-div.Sintroduction{
-    margin-top: 10%;
-    /*width: 1180px;*/
-    width: 100%;
-    /*height: 90vh;*/
+div.introductionSidebar{
+    margin-top: 100px;
+    width: 1180px;
+    height: 90vh;
     display: flex;
     justify-content: space-between;
 }
