--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -2,6 +2,14 @@ body{
     background-color: #EBE8DB;
 }
 
+div.searchResultMain{
+width: 1200px;
+    justify-content: space-between;
+    display: flex;
+}
+
+
+
 .searchresult{
     /*width: 1200px;*/
     justify-Content: space-between;
