--- a/src/app/_components/toppage_top_slideshow/common.css
+++ b/src/app/_components/toppage_top_slideshow/common.css
@@ -95,7 +95,8 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100vh;
+    padding-top: 10%;
+    padding-bottom: 12%;
     overflow: hidden;
     background-color: #EBE8DB;
 }
