--- a/src/app/product/product.css
+++ b/src/app/product/product.css
@@ -6,9 +6,9 @@ body {
     background-color: #EBE8DB;
 
 }
-main {
-    margin: 60px 100px 0 50px;
+main.productMainDisplay {
     display: flex;
+    align-items: center;
     flex-direction: row;
     /*justify-content: space-between;*/
     position: relative;
@@ -78,6 +78,7 @@ div.productMain{
     display: flex;
     flex-direction: column;
     width: 75%;
+    margin-left: -7%;
 }
 /*商品情報全体*/
 div#info{
@@ -172,7 +173,7 @@ div#controlProduct img{
     width: 50px;
 }
 
-button{
+button.productPurchase{
     background-color: #000;
     font-size: 1.2rem;
     color: #fff;
