--- a/src/app/_components/chat/chat.css
+++ b/src/app/_components/chat/chat.css
@@ -4,7 +4,7 @@ body {
 }
 
 /*チャット*/
-div#chat{
+div.Productchat{
     display: flex;
     flex-direction: row;
     margin: 50px auto 50px 50px;
@@ -22,7 +22,7 @@ input[type=text]#msg{
 }
 
 /* アイコン*/
-div#chat img{
+div.Productchat img{
     margin: 10px;
     height: 50px;
     width: 50px;
