--- a/src/app/toppage/toppage.css
+++ b/src/app/toppage/toppage.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Italiana&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Zen+Kaku+Gothic+Antique:wght@300;400;500;700;900&display=swap');
 
-body {
+body.top {
     font-family: "Zen Kaku Gothic Antique", sans-serif;
     margin: 0;
     padding: 0;
-    background: #f3f3eb;
     /*overflow-x: hidden;*/
+}
+div.top{
+    background: #f3f3eb;
 }
 
 div.toppageVideo {
