--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -1,3 +1,41 @@
 body{
     background-color: #EBE8DB;
 }
+
+.productListFrame{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+.productList_{
+    width: 20%;
+    height: 400px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 6px 7px #aaa;
+    background-color: #ddd;
+}
+
+.listImage{
+    width: 100%;
+    height: 40vh;
+    border-radius: 10px 10px 0 0;
+    background-color: #ccc;
+}
+
+.productExplanation{
+    margin: 10px 10px 0 10px;
+    text-align: left;
+    border-bottom: 2px solid #000;
+    border-image: linear-gradient(to left, #cccccc, #000000) 1;
+}
+
+.productPrice{
+    margin: 10px 10px 0 10px;
+    text-align: left;
+
+}
+
+
+
