--- a/src/app/product/[id]/product.css
+++ b/src/app/product/[id]/product.css
@@ -13,6 +13,12 @@ main.productMainDisplay {
     /*justify-content: space-between;*/
     position: relative;
 }
+
+div.productFlex{
+    display: flex;
+    align-items: center;
+}
+
 /*カート*/
 div.productCart{
     margin-top: 70px;
@@ -79,6 +85,7 @@ div.productMain{
     flex-direction: column;
     width: 75%;
     margin-left: -7%;
+    margin-top: 5%;
 }
 /*商品情報全体*/
 div#info{
