--- a/src/app/(listing)/listingScreen/listingScreen.css
+++ b/src/app/(listing)/listingScreen/listingScreen.css
@@ -88,6 +88,7 @@ div.ListingBtn{
     justify-content: space-between;
     margin: 0 auto;
     margin-bottom: 120px;
+    margin-top: 10%;
 }
 
 div.ListingBtn button{
