--- a/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
+++ b/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
@@ -1,33 +1,34 @@
 .collapsible-product-card {
-    width: 20%;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 6px 7px #aaa;
-    background-color: #ddd;
-    transition: height 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     overflow: hidden;
-    cursor: pointer;
 }
 
-/*展開時のカード*/
-.collapsible-product-card.expanded {
-    height: 500px;
-}
-
-/*通常時のカード*/
-.collapsible-product-card.collapsed {
-    height: 400px;
-}
-
-/*画像エリア*/
-.collapsible-product-card .image {
+/* 通常時の画像スタイル */
+.collapsed-image {
     width: 100%;
     height: 40vh;
     border-radius: 10px 10px 0 0;
     background-color: #ccc;
+    margin: 0;
+    /* 通常時特有のスタイルをここに追加 */
 }
 
-/*説明テキスト*/
+.testtt{
+    width: 80%;
+}
+
+/* 展開時の画像スタイル */
+.expanded-image {
+    width: 100%;
+    height: 70vh; /* 高さを大きく */
+    border-radius: 10px;
+    background-color: #ccc;
+    margin: 0;
+    /* 展開時特有のスタイルをここに追加 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    object-fit: cover;
+}
+
 .collapsible-product-card .explanation {
     margin: 10px 10px 0 10px;
     text-align: left;
@@ -35,27 +36,56 @@
     border-image: linear-gradient(to left, #cccccc, #000000) 1;
 }
 
-/*価格*/
 .collapsible-product-card .price {
     margin: 10px 10px 0 10px;
     text-align: left;
 }
 
-/*展開時のコンテンツ*/
 .expanded-content {
     transition: opacity 0.3s ease-in-out;
-    padding: 16px;
-    height: 100px;
+    height: 100%;
 }
 
-/*表示状態*/
 .expanded-content.visible {
     opacity: 1;
-    background-color: #1d4ed8;
 }
 
-/*非表示状態*/
 .expanded-content.hidden {
     opacity: 0;
+}
+
+.expanded-Name{
+    margin-top: 10px;
+    font-size: 1.5rem;
+    text-align: left;
+}
+
+.expanded-Genre{
+    text-align: left;
+    margin-top: 40px;
+    max-width: 55%;
+    border-bottom: 2px solid;
+    border-image: linear-gradient(to left, #cccccc, #000000) 1;
+}
+.expanded-Material{
+    text-align: left;
+    margin-top: 10px;
+    max-width: 60%;
+    border-bottom: 2px solid;
+    border-image: linear-gradient(to left, #cccccc, #000000) 1;
+}
+.expanded-Price{
+    text-align: left;
+    margin-top: 10px;
+    max-width: 50%;
+    border-bottom: 2px solid;
+    border-image: linear-gradient(to left, #cccccc, #000000) 1;
+}
+.expanded-Situation{
+    text-align: left;
+    margin-top: 10px;
+    max-width: 45%;
+    border-bottom: 2px solid;
+    border-image: linear-gradient(to left, #cccccc, #000000) 1;
 }
 
