--- a/src/app/product/[id]/product.css
+++ b/src/app/product/[id]/product.css
@@ -8,84 +8,85 @@ body {
 }
 main.productMainDisplay {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     position: relative;
 }
 
 div.productFlex{
+    width: 100%;
     display: flex;
     align-items: center;
 }
 
 /*カート*/
 div.productCart{
-/*    margin-top: 70px;*/
-/*    margin-right: 50px;*/
-    width: 35%;
-/*    position: sticky;*/
-/*    left: 50px;*/
-/*    top: 10px;*/
+    margin-top: 70px;
+    margin-right: 50px;
+    width: 25%;
+    position: sticky;
+    left: 50px;
+    top: 10px;
 
 }
 
-/*div#cartText{*/
-/*    margin-left: 20px;*/
-/*    width: 400px;*/
-/*    display: flex;*/
-/*}*/
+div#cartText{
+    margin-left: 20px;
+    width: 400px;
+    display: flex;
+}
 
-/*div#cartText h2{*/
+div#cartText h2{
 
-/*    font-family: "JetBrains Mono", monospace;*/
-/*    font-weight: 400;*/
-/*    font-size: 2rem;*/
-/*    font-weight: 400;*/
-/*    margin-right: 30px;*/
-/*}*/
+    font-family: "JetBrains Mono", monospace;
+    font-weight: 400;
+    font-size: 2rem;
+    font-weight: 400;
+    margin-right: 30px;
+}
 
-/*div.cart h2{*/
-/*    display: inline-block;*/
-/*    font-size: 2rem;*/
-/*}*/
-/*div.cart img.icon{*/
-/*    width: 50px;*/
-/*    height: 50px;*/
-/*}*/
+div.cart h2{
+    display: inline-block;
+    font-size: 2rem;
+}
+div.cart img.icon{
+    width: 50px;
+    height: 50px;
+}
 
-/*!*カート内商品.innerCart*!*/
-/*div.innerCart{*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    margin: 20px 20px 20px 0;*/
-/*}*/
-/*div.innerCart img{*/
-/*    height: 120px;*/
-/*    width: 120px;*/
-/*    box-shadow: #000a 1px 1px  3px;*/
-/*}*/
-/*div.innerCart p{*/
-/*    margin: 0 0 0 20px;*/
-/*    font-size: 1.1rem;*/
-/*    line-height: 1.5rem;*/
-/*}*/
-/*div.cart p span.title{*/
-/*    font-size: 1.2rem;*/
-/*    line-height: 2rem;*/
-/*}*/
-/*p#total{*/
-/*    text-align: right;*/
-/*    margin-right: 20px;*/
-/*}*/
+/*カート内商品.innerCart*/
+div.innerCart{
+    display: flex;
+    flex-direction: row;
+    margin: 20px 20px 20px 0;
+}
+div.innerCart img{
+    height: 120px;
+    width: 120px;
+    box-shadow: #000a 1px 1px  3px;
+}
+div.innerCart p{
+    margin: 0 0 0 20px;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+}
+div.cart p span.title{
+    font-size: 1.2rem;
+    line-height: 2rem;
+}
+p#total{
+    text-align: right;
+    margin-right: 20px;
+}
 
 /*全体 */
 div.productMain{
-    margin: 70px 0 0 0;
     display: flex;
     flex-direction: column;
     width: 75%;
-    margin-left: -7%;
+    margin-left: -28%;
+    margin-top: 5%;
 }
 /*商品情報全体*/
 div#info{
@@ -169,7 +170,7 @@ div#text a#seller img{
 /* 購入ボタン・アイコン #control*/
 div#controlProduct{
     display: flex;
-    margin-left:600px;
+    margin-left: 50%;
     margin-bottom: 20px;
     text-align: right;
 }
@@ -188,6 +189,13 @@ button.productPurchase{
     padding: 10px 20px;
 }
 
+.likeButton {
+    background-color: #000;
+    font-size: 1.2rem;
+    color: #fff;
+    border-radius: 50px;
+    padding: 10px 20px;
+}
 div#footer{
     margin-top: 200px !important;
 }
