--- a/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
+++ b/src/app/_components/CollapsibleProductCard/CollapsibleProductCard.css
@@ -29,7 +29,7 @@
 }
 
 .testtt{
-    width: 80%;
+    width: 100%;
 }
 
 .expanded-box{
@@ -86,37 +86,83 @@
 }
 
 .expanded-Name{
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 1.5rem;
     text-align: left;
 }
 
 .expanded-Genre{
     text-align: left;
+    padding-bottom: 10px;
     margin-top: 40px;
-    max-width: 55%;
+    max-width: 100%;
     border-bottom: 2px solid;
     border-image: linear-gradient(to left, #cccccc, #000000) 1;
 }
 .expanded-Material{
     text-align: left;
-    margin-top: 10px;
-    max-width: 60%;
+    padding-bottom: 10px;
+    margin-top: 30px;
+    max-width: 90%;
     border-bottom: 2px solid;
     border-image: linear-gradient(to left, #cccccc, #000000) 1;
 }
 .expanded-Price{
     text-align: left;
-    margin-top: 10px;
-    max-width: 50%;
+    padding-bottom: 10px;
+    margin-top: 30px;
+    max-width: 80%;
     border-bottom: 2px solid;
     border-image: linear-gradient(to left, #cccccc, #000000) 1;
 }
 .expanded-Situation{
     text-align: left;
-    margin-top: 10px;
-    max-width: 45%;
+    padding-bottom: 10px;
+    margin-top: 30px;
+    max-width: 75%;
     border-bottom: 2px solid;
     border-image: linear-gradient(to left, #cccccc, #000000) 1;
+}
+.expanded-Cart{
+    padding: 15px;
+    margin-top: 40px;
+    text-align: center;
+    border: 1.5px solid #000;
+    border-radius: 30px;
+    background-color: #A58473;
+}
+
+.expanded-comment{
+
+}
+.expanded-comment-fream{
+    width: 70%;
+    padding: 10px;
+    margin-top: 90px;
+    margin-left: 20px;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
+.comment-account{
+    display: flex;
+    padding: 15px 0 0 10px;
+}
+#ac_img{
+    width: 20%;
+    height: 6vh;
+    border-radius: 50%;
+    background-color: #555555;
+}
+#ac_name{
+    margin-left: 20px;
+    text-align: center;
+}
+
+.pu_comment{
+    margin-top: 10px;
+    height: 36vh;
+    line-height: 1.5rem;
+    overflow: hidden;
 }
 
