--- a/src/app/(confirm)/confirmUser/confirmUser.css
+++ b/src/app/(confirm)/confirmUser/confirmUser.css
@@ -31,7 +31,8 @@ div#confirms{
 div.confirm{
     display: inline-flex;
     flex-direction: row;
-    width: 700px;
+    width: 90%;
+    /*pixelにするなら650~700ぐらい*/
 
     margin: 30px 0 30px 10%;
     padding: 15px 30px;
@@ -46,6 +47,8 @@ div.confirm#fav{
 }
 
 div.confirm svg{
+    width: 150px;
+    height: 150px;
     margin-right: 20px;
 }
 div.confirm#fav svg,div.confirm#fav p{
