--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -38,4 +38,12 @@ body{
 }
 
 
+/* ページネーションのCSS */
+.PaginateFlame{
+    /*background-color: #660000;*/
+    display: flex;
+    flex-direction: row;
+    margin: 10px 10px 0 10px;
+    list-style: none;
+}
 
