--- a/src/app/tradeChat/[productId]/trade.css
+++ b/src/app/tradeChat/[productId]/trade.css
@@ -121,3 +121,67 @@ button{
     margin-bottom: 30px;
 }
 
+div.purchaseMessage{
+    flex-direction: row;
+    margin: 50px auto 50px 50px;
+    width: 80%;
+    height: 400px;
+    background: #D9D9D9;
+    border: #AAA solid 2px;
+}
+
+/*チャット*/
+div.Productchat{
+    position: relative;
+    overflow-y: auto;
+    height: 80%;
+}
+
+div.messageBox{
+    position: sticky;
+    display: flex;
+}
+
+input[type=text]#msg{
+    margin: 10px;
+    width: 80%;
+    height: 50px;
+    border-style: none none solid none;
+}
+
+/* アイコン*/
+div.Productchat img{
+    margin: 10px;
+    height: 50px;
+    width: 50px;
+    background-color: #fff;
+    border-radius: 100%;
+}
+
+
+/* 送信ボタン仮設　作るにしてもアイコンにした方がいいかも */
+input[type=submit]{
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+    color: white;
+    font-weight: bold;
+    background-color:#aaa;
+    border: #555 2.5px solid;
+    border-radius: 10px;
+}
+
+
+/*画像にしてみた*/
+button{
+    height: 50px;
+    margin: 10px;
+    border: #555 2px solid;
+    border-radius: 10%;
+}
+button img#sendMsg{
+    height: 30px;
+    width: 30px;
+    background-color: #fff0;
+    border-radius: 0;
+}
