--- a/src/app/_components/chat/chat.css
+++ b/src/app/_components/chat/chat.css
@@ -75,22 +75,22 @@ button img#sendMsg{
     background-color: #bbb;
 }
 
-.comment-sec{
+.comment-sec-lef{
     padding-top: 15px;
 }
 
-.comment-user{
+.comment-user-lef{
     display: flex;
     align-items: center;
     padding-bottom: 5px;
     margin-left: 10px;
     font-size: 1.1rem;
 }
-.comment-user img{
+.comment-user-lef img{
     margin-right: 8px;
 }
 
-.comment-area{
+.comment-area-lef{
     display: flex;
     align-items: center;
     width: 60%;
@@ -106,5 +106,36 @@ button img#sendMsg{
     width: 10%;
     height: auto;
     border:none ;
+    background-color: #ddd;
+}
+
+
+
+.comment-sec-rig{
+    padding-top: 15px;
+    display: flex;
+    justify-content: right;
+}
+
+.comment-user-rig{
+    display: flex;
+    align-items: center;
+    padding-bottom: 5px;
+    margin-left: 10px;
+    font-size: 1.1rem;
+}
+.comment-user-rig img{
+    margin-right: 8px;
+}
+
+.comment-area-rig{
+    display: flex;
+    align-items: center;
+    width: 60%;
+    padding: 0 10px;
+    margin-left: 10px;
+    overflow-wrap: break-word;
+    border-radius: 3px;
+    border: #000 1px solid;
     background-color: #ddd;
 }
