--- a/src/app/_components/stripe/stripe.css
+++ b/src/app/_components/stripe/stripe.css
@@ -4,11 +4,11 @@ body{
 }
 
 div.StripePurchaseButtonMain{
-    width:150%;
+    width:100%;
 }
 
 button.StripePurchaseButton{
-    width: 130%;
+    width: 150px;
     background-color: #000;
     font-size: 1.2rem;
     color: #fff;
