--- a/src/app/searchResult/searchResult.css
+++ b/src/app/searchResult/searchResult.css
@@ -53,13 +53,29 @@ width: 1200px;
 
 }
 
+/*件数表示*/
+div#NumView{
+    margin: 0 10% 0 5%;
+}
+h2#SRTotal{
+    font-size: 1.8rem;
+    text-indent: 3.8rem;
+    margin: 0 0 15px 0;
+    border: #605252 2px;
+    border-style: none none solid none;
+}
+p#SRNn{
+    text-indent: 4.8rem;
+    font-size: 1.2rem;
+}
+
 
 /* ページネーションのCSS */
 .PaginateFlame{
     /*background-color: #660000;*/
     display: flex;
     flex-direction: row;
-    margin: 10px 10px 0 10px;
+    margin: 10px 10px 50px 10px;
     list-style: none;
 }
 
