--- a/src/app/_components/blog/Blogintroduction.css
+++ b/src/app/_components/blog/Blogintroduction.css
@@ -45,6 +45,7 @@ li{
 }
 
 .blog-date{
+    margin-top: -10px;
     margin-bottom: 4px;
     font-size: 12px;
     color: #666;
@@ -53,4 +54,9 @@ li{
 .text-container {
     display: flex;
     flex-direction: column;
+}
+
+.sub-text{
+    display: inline-block;
+    margin-left: 20px;
 }
