--- a/src/app/tradeChat/[productId]/trade.css
+++ b/src/app/tradeChat/[productId]/trade.css
@@ -128,6 +128,7 @@ div.purchaseMessage{
     height: 400px;
     background: #D9D9D9;
     border: #AAA solid 2px;
+    border-radius: 4px;
 }
 
 /*チャット*/
@@ -140,18 +141,24 @@ div.Productchat{
 div.messageBox{
     position: sticky;
     display: flex;
+    width: 96%;
+    margin: 0 10px;
+    border-top: 1px solid #ccc;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
 
 input[type=text]#msg{
     margin: 10px;
+    padding-left: 5px;
     width: 80%;
     height: 50px;
     border-style: none none solid none;
+    border-radius: 3px;
 }
 
 /* アイコン*/
-div.Productchat img{
-    margin: 10px;
+#chatimg{
+    margin: 10px 0 0 10px ;
     height: 50px;
     width: 50px;
     background-color: #fff;
@@ -184,4 +191,68 @@ button img#sendMsg{
     width: 30px;
     background-color: #fff0;
     border-radius: 0;
+}
+
+
+/*---右寄せのチャット範囲---*/
+.comment-area-rig{
+    display: flex;
+    align-items: center;
+    max-width: 60%;
+    padding: 6px 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    overflow-wrap: break-word;
+    border-radius: 10px;
+    border: #000 1px solid;
+    background-color: #eee;
+}
+
+/*---チャット右寄せ---*/
+.comment-area-frame-rig{
+    display: flex;
+    justify-content: flex-end;
+}
+
+/*---右寄せチャットのユーザー---*/
+.comment-user-rig{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+}
+
+
+/*---左寄せのチャット範囲---*/
+.comment-area-lef{
+    display: flex;
+    align-items: center;
+    max-width: 60%;
+    padding: 6px 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    overflow-wrap: break-word;
+    border-radius: 10px;
+    border: #000 1px solid;
+    background-color: #eee;
+}
+
+/*---チャット左寄せ---*/
+.comment-area-frame-lef{
+    display: flex;
+    justify-content: flex-start;
+}
+
+/*---左寄せチャットのユーザー---*/
+.comment-user-lef{
+    display: flex;
+    justify-content: flex-start;
+    margin: 5px 0 5px 10px;
+
+}
+
+/*左寄せユーザーネーム*/
+.comment-user-name-lef{
+    display: flex;
+    align-items: center;
+    font-size: 1.1rem;
 }
