取引きメッセージのデザイン完成

--- a/src/app/tradeChat/[productId]/trade.css
+++ b/src/app/tradeChat/[productId]/trade.css
@@ -233,7 +233,7 @@ button img#sendMsg{
     overflow-wrap: break-word;
     border-radius: 10px;
     border: #000 1px solid;
-    background-color: #eeeeee;
+    background-color: #eee;
 }
 
 /*---チャット左寄せ---*/
