--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -19,7 +19,6 @@ header div.nav {
     margin-top: 30px;
     width: 100%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -39,17 +38,18 @@ header div.title h1:hover{
 }
 
 
+/* タイトルとの間 */
 div.bar{
     /*width: 400px;*/
-    margin-left: 20%;
+    margin-left: 10%;
 }
 
 header div.bar ul {
     /*display: -webkit-flex;*/
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
     list-style: none;
-    /*margin-right: 320px;*/
     font-size: 1rem;
 }
 
@@ -89,10 +89,14 @@ li.Headersearch svg{
 
 /* ユーザーネーム:ログイン遷移 */
 li#UserName{
-    display: flex;
-    width: 8rem;
-    align-items: center;
-    overflow-wrap: break-word;
+    margin: 15px 0 0 0;
+    width: 16rem;
+    overflow:hidden;
+    vertical-align: bottom;
+}
+li#UserName:hover{
+    color: #000;
+    text-shadow: none;
 }
 p#usernameGet{
 }
@@ -100,6 +104,8 @@ p#usernameGet{
 
 p#name{
     width: 8rem;
+    overflow-wrap: break-word;
+
     /*margin-left: 74px;*/
 }
 
