縦幅修正したいけど一旦保留

--- a/src/app/updateProfile/updateProfile.css
+++ b/src/app/updateProfile/updateProfile.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: "zen+KakuGothic+Antique", system-ui;
-    background-color: #D0C7B2;
+    background-color: #EBE8DB;
     margin: 0;
     padding: 0;
 }
