--- a/src/app/(confirm)/confirmUser/confirmUser.css
+++ b/src/app/(confirm)/confirmUser/confirmUser.css
@@ -7,6 +7,7 @@ main#CUmain{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 100%;
     margin: 2% 0 2% 0;
 }
 span#btn{
@@ -81,7 +82,7 @@ div.confirm p#pointHst{
 div.rightbar{
     width: 40%;
     height: 100%;
-    margin: 20px 40px 20px 0;
+    margin: 10px 40px 10px 0;
     padding: 20px;
     border-radius: 30px;
     box-shadow:10px 10px 0  #0008;
@@ -101,9 +102,7 @@ div.rightbar_flex{
 
 div.rightbar_product{
     display: flex;
-    margin-top: 60px;
-    margin-left: 30px;
-    margin-bottom: 30px;
+    margin: 30px 30px 0 30px;
 }
 
 div.rightbar_product_text{
@@ -111,5 +110,5 @@ div.rightbar_product_text{
 }
 
 div.rightbar_product_text p{
-    font-size: 30px;
+    font-size: 1.2rem;
 }
