--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -175,15 +175,28 @@ li#list_bell{
 /*お知らせ内容についてのＣＳＳ*/
 .alert{
     margin-top: 10px;
-    display: flex;
     align-items: center;
     margin-left: 10px;
     margin-bottom: 20px;
     border-bottom: 1px solid #aaa;
 }
 
+.alertDisplay{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #aaa;
+    margin-bottom: 3px;
+}
+
+.alertDisplay p{
+    font-size: 14px;
+}
+
 .alert svg{
-    margin-left: 30px;
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+    margin-right: 20px;
     padding-bottom: 10px;
 }
 
