ウィンドウサイズが小さい時名前を省略する仕様に変更

--- a/src/app/_components/header/Heder.css
+++ b/src/app/_components/header/Heder.css
@@ -253,7 +253,9 @@ span.under_bar {
 }
 
 /* 1250より小さい場合は要素を畳まないとだめかも */
-@media screen and (max-width: 1250px) {
-
+@media screen and (max-width: 1380px) {
+    li#UserName{
+        display: none;
+    }
 
 }
