--- a/src/app/tradeChat/[productId]/trade.css
+++ b/src/app/tradeChat/[productId]/trade.css
@@ -196,10 +196,11 @@ button img#sendMsg{
 
 /*---右寄せのチャット範囲---*/
 .comment-area-rig{
+    position: relative;
     display: flex;
     align-items: center;
     max-width: 60%;
-    padding: 6px 10px;
+    padding: 10px 15px 10px 10px;
     margin-right: 10px;
     margin-bottom: 10px;
     overflow-wrap: break-word;
@@ -221,19 +222,12 @@ button img#sendMsg{
     margin-right: 10px;
 }
 
-
-/*---左寄せのチャット範囲---*/
-.comment-area-lef{
-    display: flex;
-    align-items: center;
-    max-width: 60%;
-    padding: 6px 10px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    overflow-wrap: break-word;
-    border-radius: 10px;
-    border: #000 1px solid;
-    background-color: #eee;
+/*絵文字ポジション*/
+.comment-emoji-rig{
+    position: absolute;
+    right: -2px;
+    bottom: -2px;
+    transform: rotate(-0.03turn);
 }
 
 /*---チャット左寄せ---*/
@@ -242,12 +236,38 @@ button img#sendMsg{
     justify-content: flex-start;
 }
 
+/*---左寄せのチャット範囲---*/
+.comment-area-lef{
+    position: relative;
+    display: flex;
+    align-items: center;
+    max-width: 60%;
+    padding: 10px 15px 10px 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    overflow-wrap: break-word;
+    border-radius: 10px;
+    border: #000 1px solid;
+    background-color: #eee;
+}
+
+/*絵文字ポジション*/
+.comment-emoji-lef{
+    position: absolute;
+    right: 3px;
+    bottom: -4px;
+    transform: rotate(-0.03turn);
+}
+
 /*---左寄せチャットのユーザー---*/
 .comment-user-lef{
     display: flex;
     justify-content: flex-start;
     margin: 5px 0 5px 10px;
+}
 
+.chaticon img{
+    border-radius: 50%;
 }
 
 /*左寄せユーザーネーム*/
