--- a/src/app/favorite/favorite.css
+++ b/src/app/favorite/favorite.css
@@ -4,26 +4,28 @@ body {
     background-color: #EBE8DB;
 }
 
-span#btn{
-    position: sticky;
-    top: 90%;
-    left: 87%;
-
-
+/*　パンくずリスト　*/
+div#bread{
+    margin: 25px 0 0 15px;
+    display: flex;
 }
-span#btn button{
-    opacity: 0.7;
-    padding: 10px 30px;
-    border-radius: 20px;
-    background-color: #605252;
-    color: white;
+div#bread p{
+    margin: 0 0 15px 0;
+    color: #605252;
     font-weight: bold;
 }
-
+div#bread p.breadText{
+    margin: 0 1rem 0 1rem;
+    transition: 0.2s;
+}
+div#bread p.breadText:hover{
+    opacity: 0.7;
+    border-bottom: #605252 solid 1px;
+}
 
 
 div.favorite{
-    margin: 50px 0 50px 0;
+    margin: 0 0 50px 0;
     padding: 10px 0;
     width: 100%;
     display: flex;
